# sdd-semantic-pipeline

./: .containerignore  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Containerfile  DISCOVERED_INTERFACES.md  README.md  RETRIEVAL_LOG.md  SPIKE_FINDINGS.md  compose.yaml  devfile.yaml  environment.yml  mkdocs.yml  pyproject.toml  setup-second-brain.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: adr-generator.agent.md  corpus-researcher.agent.md  sad-skeptic.agent.md
.github/instructions/: copilot-assets.instructions.md  docs.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: README.md  code-review.prompt.md  convert-confluence.prompt.md  copilot-context.prompt.md  doc-to-md.prompt.md  docs-sync.prompt.md  gitlab-mr.prompt.md  grill-me.prompt.md  index-corpus.prompt.md  security-review.prompt.md  simplify.prompt.md  verify-change.prompt.md
.github/workflows/: copilot-health.yml  docs.yml  pages.yml
.understand-anything/: .understandignore  fingerprints.json  meta.json
.understand-anything/.trash-1781475845/: assemble-review.json  assembled-graph.json  batch-1.json  batch-10.json  batch-11.json  batch-12.json  batch-13.json  batch-14.json  batch-15.json  batch-16-part-1.json  batch-16-part-2.json  batch-16-part-3.json  batch-17.json  batch-18.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batch-8.json  batch-9.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
config/: entity-terms.json  field_directions.yaml  sharepoint-manifest.yaml
convert/examples/: README.md  adversarial-edge-cases.html  order-management-sad.storage.html
data/: taxonomy.json
docs/: confluence-conversion-rules.md  enrichment-algorithm.md  entity-vocab.json  index.md  processing-mode-and-structural.md  technology-selection.md
docs/Agents/: README.md  agent-architecture.md  agent-checklists.md  discussion-agenda.md  example-endpoint-change.md  first-meeting.md  glossary.md  grounding-how-to.md  harness-options.md  harness-synergy.md  how-each-part-works.md  install.md  keeping-it-safe.md  mvp-on-gitlab.md  operations.md  prep-brief.md  search-and-mcp-alternatives.md  start-here.md  synergy-walkthrough.md
docs/_root/: claude.md  readme.md
docs/archive/: DISCOVERED_INTERFACES.md
docs/guides/: confluence-storage-format-gitlab-markdown.md  convert-html-gitlab-markdown-linux.md  convert-html-gitlab-markdown-windows.md  copilot-integration.md  index.md  log.md  pipeline-101.md
docs/inbox/: CONFLUENCE_FORMAT_INSTRUCTIONS.md  Convert.Linux.Readme.md  Convert.Windows.Readme.md
docs/learn/: README.md
docs/notes/: SPIKE_FINDINGS.md
docs/presentation/: README.html  README.md  demo-script.md  sdd-pipeline-deep-dive.md  sdd-pipeline-overview.html  sdd-pipeline-overview.md  sdd-pipeline-presentation-short.html  sdd-pipeline-presentation.html
docs/reference/: cli.md  configuration.md
docs/template/: template.md
docs/testing/: index.md
eval/: README.md  e2e_queries.yaml  e2e_sources.yaml  queries.yaml
eval/corpus/: sad-retailnexus-oms.md  scripting-on-dtk.md
gitlab/ci-component/: .gitlab-ci.yml  LICENSE  README.md
inbox/: .gitkeep
inbox/sample/: .gitkeep
k8s/: job.yaml
learn/: README.md
learn/bridge/: 01-project-anatomy-and-tooling.md  (+6 more)
outbox/: .gitkeep
scripts/: eval_retrieval.py  fetch_e2e_corpus.py  ingest.ps1  ingest.sh  podman.ps1  podman.sh  pull-index.ps1  pull-index.sh
src/sdd_pipeline/: cli.py  (+32 more)
tests/: conftest.py  download-sharepoint.Tests.ps1  test_ast_parser.py  test_check_copilot.py  test_check_docs.py  test_chunk_gate.py  test_chunking.py  test_chunking_metadata.py  test_cli.py  test_cli_mcp.py  test_cli_parallel.py  test_cli_workspace.py  test_config.py  test_confluence_pf_filter.py  test_corpus_taxonomy.py  test_detection.py  test_direction.py  test_doc_router.py  test_docs_sync_skill.py  test_doctomd_skill.py  test_download.py  test_e2e_real_docs.py  test_embeddings.py  test_enrichment.py  test_enrichment_inventory.py  test_eval_gate.py  test_eval_retrieval.py  test_extract_prose.py  test_extract_structural.py  test_header_norm.py  test_html_to_gitlab_md.py  test_html_to_gitlab_md_v3.py  test_lang_rules.py  test_mcp_server.py  test_memory_vector_store.py  test_models.py  test_pipeline.py  test_pipeline_inventory_e2e.py  test_quality.py  test_reconcile.py  (+12 more)
vscode-extension/: .eslintrc.cjs  .gitignore  .vscodeignore  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
wiki/: confluence-storage-format-gitlab-markdown.md  convert-html-gitlab-markdown-linux.md  convert-html-gitlab-markdown-windows.md  index.md  log.md
(+209 files in other folders)
