[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "sdd-pipeline"
version = "0.1.0"
description = "Semantic search pipeline for Confluence SDD documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "panflute>=2.3",
    "langchain-core>=0.3",
    "sentence-transformers>=3.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.9",
    "chromadb>=0.5",       # keeps the chroma-backend tests runnable in CI
    "textual>=0.50",       # interactive search TUI (sdd-pipeline tui) + its tests
    "mcp>=1.27",           # MCP stdio server (sdd-pipeline mcp) + its tests
    "langdetect>=1.0.9",   # auto language detection (--lang auto) + its tests
    "snowballstemmer>=2.2",  # optional BM25 stemming (--stem) + its tests
    "cairosvg>=2.7",       # SVG->PNG for the gliffy fidelity PNG-regression tests
    "pillow>=10.0",        # pixel-diff for the gliffy fidelity PNG-regression tests
]
azure = ["openai>=1.0"]
chroma = ["chromadb>=0.5"]
tui = ["textual>=0.50"]    # interactive search browser: sdd-pipeline tui
mcp = ["mcp>=1.27"]        # MCP stdio server for GitHub Copilot: sdd-pipeline mcp
lang = ["langdetect>=1.0.9"]      # per-document language auto-detection: --lang auto
stem = ["snowballstemmer>=2.2"]   # snowball stemming for BM25 lexical recall: --stem
download = ["requests>=2.31"]     # optional SiteMinder-aware ingestion: sdd-pipeline download
raster = ["cairosvg>=2.7", "pillow>=10.0"]  # SVG->PNG pixel-diff regression (gliffy fidelity)

[project.scripts]
sdd-pipeline = "sdd_pipeline.cli:app"

# ── Package discovery (src layout) ───────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tools*"]   # dev tooling/eval corpus under src/tools/ is not part of the shipped package

[tool.setuptools.package-data]
"sdd_pipeline" = ["py.typed"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths     = ["tests"]
pythonpath    = ["src"]          # makes `import sdd_pipeline` work without install
addopts       = "-v --tb=short"
markers       = [
    "slow: tests that require pandoc or a real ML model (skip with -m 'not slow')",
    "integration: end-to-end tests requiring all runtime services",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source   = ["sdd_pipeline"]
branch   = true
omit     = ["*/cli.py"]          # typer CLI best tested with integration tests

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 70

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
src            = ["src"]
target-version = "py311"
line-length    = 100
# Dev tooling + eval corpus live under src/tools/ but are not the shipped package;
# keep them out of the lint gate (they were not gated as the old top-level scripts/).
extend-exclude = ["src/tools"]

[tool.ruff.lint]
select  = ["E", "F", "I", "N", "UP", "B", "C4", "PTH", "RUF"]
ignore  = [
    "E501",    # line too long — handled by formatter
    "B008",    # do not perform function calls in default arguments (typer pattern)
    "RUF012",  # mutable class vars — not applicable to dataclasses
]
# Glyphs deliberately used in emoji/symbol maps and prose (Confluence macro
# rendering, en-dashes) — keep RUF001/002/003 active elsewhere.
allowed-confusables = ["×", "–", "−", "ℹ", "➕", "➖"]

[tool.ruff.lint.isort]
known-first-party = ["sdd_pipeline"]

[tool.ruff.lint.per-file-ignores]
# Intentional no-break-space literals: a U+00A0→space replacement in the
# converter's shared post-process layer and the test that asserts it.
# allowed-confusables can't whitelist NBSP, so scope the suppression to these files.
"src/sdd_pipeline/convert/base.py" = ["RUF001"]
"tests/convert/test_html_to_gitlab_md.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.11"
strict                = false
warn_return_any       = true
warn_unused_configs   = true
ignore_missing_imports = true
exclude               = ["tests/", "src/tools/"]
